--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav>
         <div class="container nav_container">
             <div id="logo1">
-            <img src="./IMAGE/collage.png" alt="">
+            <img src="collage.png" alt="">
         </div>
             <a href="index.html"><h4>Indian Institute of Engineering Science and Technology,Shibpur</h4></a>
             <ul class="nav_menu">
